Columns (#10)
* email verif when register

* added columns

* main.go fixed

---------
